...
                    }
                )

                // Palette Button
                BottomAppBarItem(
                    iconResource = R.drawable.palette,
                    buttonText = "Palette",
                    onClick = {
                        navigateToPenCustomizer()
                    }
                )

                // Undo Button
                BottomAppBarItem(
                    iconResource = R.drawable.undo,
                    buttonText = "Undo",
                    onClick = {
                        pathPropertiesViewModel.undoLastAction()
                    }
                )

                // Clear All Button
                BottomAppBarItem(
                    iconResource = R.drawable.clear_all,
                    buttonText = "Clear All",
                    onClick = {
                        pathPropertiesViewModel.clearAllPaths()
                    }
                )

                BottomAppBarItem(
                    iconResource = R.drawable.share,
                    buttonText = "Share",
                    onClick = {
                        onShareClick(
                            scope,
                            context,
                            captureController,
                            apiViewModel,
...
        // Add a top title bar
        topBar = {
            CenterAlignedTopAppBar(
                title = {
                    TextField(
                        textStyle = LocalTextStyle.current.copy(textAlign = TextAlign.Center),
                        value = drawingTitle ?: "Untitled",
                        onValueChange = {
                            apiViewModel.setActiveDrawingInfoTitle(it)
                        },
                        singleLine = true,
                        colors = TextFieldDefaults.colors(
                            focusedTextColor = Color.White,
...
                            )
                        }

                    ) {
                        Icon(
                            imageVector = Icons.Default.ArrowBack,
                            contentDescription = "Back"
                        )
                        Text(text = "Back", modifier = Modifier.padding(start = 4.dp))
                    }
                },

                actions = {
...
                                apiViewModel,
                                navigateToPopBack
                            )
                        }

                    ) {
                        Text(text = "Done", modifier = Modifier.padding(end = 4.dp))
                        Icon(
                            imageVector = Icons.Default.Done,
                            contentDescription = "Done",
                        )
                    }
                },
...
