...
    enum class EraseDrawToggleButtonIconEnum(val iconResource: Int) {
        ERASE_MODE_ICON(R.drawable.ink_eraser_off),
        DRAW_MODE_ICON(R.drawable.ink_eraser)
    }

    enum class EraseDrawToggleButtonTextEnum(val text: String) {
        ERASE_MODE_TEXT("Draw"),
        DRAW_MODE_TEXT("Erase")
    }

    private val _hexColorCode = MutableStateFlow("#ffffff")
    val hexColorCode: StateFlow<String> = _hexColorCode.asStateFlow()

    private val _currentPathProperty = MutableStateFlow(PathProperties())
...
